takamaka_examples/src/takamaka/tests/errors/illegalcalltoentry2/C.java
package takamaka.tests.errors.illegalcalltoentry2;

import io.takamaka.code.annotations.Entry;
import io.takamaka.code.lang.Contract;

public class C extends Contract {

	public @Entry void entry() {}
}